--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#FFD700" />
     <meta name="apple-mobile-web-app-title" content="NomeApp" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="apple-touch-icon" href="assets/icon-192.png" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
